--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,5 +1,6 @@
 %h1
 	Message Feed
 
-- @messages.each do |message|
-	= message.content
+#messages
+	- @messages.each do |message|
+		= message.content
